crates/quaffed/tests/snapshots/end_to_end__a_query_spanning_lines_is_folded_onto_one_output_line.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-s"
    - "ready:\n    return"
---
success: true
exit_code: 0
----- stdout -----
a.py:1:4-2:10: ready: return

----- stderr -----
