crates/quaffed/tests/snapshots/end_to_end__a_query_that_is_not_utf8_is_refused.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - caf�
---
success: false
exit_code: 3
----- stdout -----

----- stderr -----
quaff: the query "caf\xE9" is not valid UTF-8
