crates/quaffed/tests/snapshots/end_to_end__a_scope_narrows_the_search_to_a_directory_or_a_file-2.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - TODO
    - app.py
---
success: true
exit_code: 0
----- stdout -----
app.py:2:23-2:26: TODO

----- stderr -----
