crates/quaffed/tests/snapshots/end_to_end__a_scope_narrows_the_search_to_a_directory_or_a_file.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - TODO
    - pkg
---
success: true
exit_code: 0
----- stdout -----
pkg/client.py:1:3-1:6: TODO
pkg/client.py:3:13-3:16: TODO
pkg/client.py:3:18-3:21: TODO

----- stderr -----
