crates/quaffed/tests/snapshots/end_to_end__a_scope_that_does_not_exist_is_an_io_error_naming_it.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - TODO
    - missing
---
success: false
exit_code: 7
----- stdout -----

----- stderr -----
quaff: reading the scope "missing": No such file or directory (os error 2)
