crates/quaffed/tests/snapshots/end_to_end__a_script_file_that_cannot_be_read_exits_7_naming_it.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-f"
    - scripts/missing.quaff
---
success: false
exit_code: 7
----- stdout -----

----- stderr -----
quaff: reading the script "scripts/missing.quaff": No such file or directory (os error 2)
