crates/quaffed/tests/snapshots/end_to_end__a_script_that_is_not_utf8_exits_3_naming_where.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-f"
    - scripts/latin1.quaff
---
success: false
exit_code: 3
----- stdout -----

----- stderr -----
quaff: scripts/latin1.quaff:2:10: the script is not valid UTF-8 here; a script is read as UTF-8
